[package]
name = "async_zmq"
version = "0.3.2"
authors = ["Yu-Wei Wu <wusyong9104@gmail.com>"]
edition = "2021"
description = "Async version for ZeroMQ bindings"
keywords = ["async", "bindings", "protocol", "zmq"]
categories = ["Asynchronous", "API bindings", "Concurrency", "Network programming"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/wusyong/async-zmq"
documentation = "https://docs.rs/async-zmq"

[dependencies]
mio = "0.6"
zmq = "0.9"
futures = "0.3"
slab = "0.4"
thiserror = "1.0"
once_cell = "1.15"

[features]
vendored = ["zmq/vendored"]

[dev-dependencies]
tokio = { version = "1.21.2", features = ["full"] }
async-std = { version = "1.5", features = ["attributes"] }
